k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  template:
    spec:
      securityContext:
        runAsUser: 65534
        runAsGroup: 65534

      containers:
      - name: data-cube-curation
        image: data-cube-curation
        imagePullPolicy: Always

        ports:
        - name: http
          containerPort: 3000
          protocol: TCP

        livenessProbe:
          initialDelaySeconds: 5
          httpGet:
            path: /
            port: http

        readinessProbe:
          initialDelaySeconds: 5
          httpGet:
            path: /
            port: http

        resources:
          requests:
            cpu: 100m
            memory: 150Mi
          limits:
            cpu: 200m
            memory: 300Mi

        securityContext:
          readOnlyRootFilesystem: true
